# examples

go/protobuf/ensure-idempotent/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
go/protobuf/ensure-idempotent/api/: BUILD.bazel  api.proto  api_test.go
