load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/genkami/examples/go/protobuf/ensure-idempotent/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    embed = [":api_go_proto"],
    importpath = "github.com/genkami/examples/go/protobuf/ensure-idempotent/api",
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
)
